--- a/src/view/mainGame.fxml
+++ b/src/view/mainGame.fxml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-
-<AnchorPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainGameController">
-   <children>
-      <HBox fx:id="hBox" spacing="20.0">
-         <children>
-            <Label text="PlayerName" />
-            <Label text="PlayerScore" />
-         </children></HBox>
-   </children>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1"
+            fx:controller="controller.MainGameController">
+    <children>
+        <HBox fx:id="hBox" spacing="20.0">
+            <children>
+                <Label text="PlayerName"/>
+                <Label text="PlayerScore"/>
+            </children>
+        </HBox>
+    </children>
 </AnchorPane>
