--- a/src/view/mainGame.fxml
+++ b/src/view/mainGame.fxml
@@ -25,6 +25,18 @@
                      <children>
                         <HBox alignment="CENTER" spacing="20.0">
                            <children>
+                              <Label fx:id="ROUND" text="Round" />
+                              <Label fx:id="round" text="Label" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" spacing="20.0">
+                           <children>
+                              <Label fx:id="LEVELROUND" text="LevelRound" />
+                              <Label fx:id="levelRound" text="Label" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" spacing="20.0">
+                           <children>
                               <ImageView fx:id="SNAKE" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" />
                               <Label fx:id="Snake" text="PlayerName" />
                            </children>
