--- a/src/view/login_view.fxml
+++ b/src/view/login_view.fxml
@@ -4,40 +4,59 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="300.0" prefWidth="400.0" spacing="5.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginViewController">
+<VBox alignment="CENTER" spacing="5.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginViewController">
    <children>
       <Label alignment="CENTER" prefHeight="36.0" prefWidth="346.0" text="Sneaks &amp; Ladders Game" VBox.vgrow="SOMETIMES">
          <font>
             <Font name="System Bold Italic" size="23.0" />
          </font>
       </Label>
-      <HBox alignment="CENTER" spacing="10.0">
+      <GridPane>
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="132.0" minWidth="10.0" prefWidth="86.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="186.0" minWidth="10.0" prefWidth="186.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <VBox alignment="CENTER_RIGHT" spacing="20.0">
-               <children>
-                  <Label alignment="CENTER_RIGHT" text="Email" />
-                  <Label alignment="CENTER_RIGHT" text="Password" />
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" spacing="10.0">
-               <children>
-                  <TextField fx:id="email" prefHeight="27.0" prefWidth="167.0" />
-                  <TextField fx:id="password" />
-               </children>
-            </VBox>
+            <Label alignment="CENTER_RIGHT" prefHeight="22.0" prefWidth="108.0" text="Email">
+               <GridPane.margin>
+                  <Insets right="5.0" />
+               </GridPane.margin>
+            </Label>
+            <Label alignment="CENTER_RIGHT" prefHeight="22.0" prefWidth="108.0" text="Password" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets right="5.0" />
+               </GridPane.margin>
+            </Label>
+            <TextField fx:id="email" GridPane.columnIndex="1" />
+            <TextField fx:id="password" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
-      </HBox>
+         <VBox.margin>
+            <Insets />
+         </VBox.margin>
+         <padding>
+            <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+         </padding>
+      </GridPane>
       <Label fx:id="errorLabel" prefHeight="34.0" prefWidth="341.0" />
-      <HBox alignment="CENTER" prefHeight="12.0" prefWidth="272.0" spacing="20.0">
+      <HBox alignment="CENTER" prefHeight="12.0" prefWidth="272.0" spacing="10.0">
          <children>
             <Button mnemonicParsing="false" onAction="#signIn" prefHeight="24.0" prefWidth="120.0" text="Sign in" />
             <Button mnemonicParsing="false" onAction="#login" prefHeight="24.0" prefWidth="120.0" text="Login" />
          </children>
       </HBox>
+      <Button mnemonicParsing="false" onAction="#loginAsAdmin" prefHeight="28.0" prefWidth="125.0" text="Login as Admin" />
+      <Button mnemonicParsing="false" onAction="#loadTestAccount" prefHeight="24.0" prefWidth="120.0" text="Load Test Account" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
